--- a/quadtree-base/.vscode/launch.json
+++ b/quadtree-base/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/quadtree.exe",
-            "args": ["deathstar.png"],
+            "args": ["sigil.jpg"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
